One FAQ added, support account changed

--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 
                     <strong>By :</strong> WRTeam<br />
                     <strong>Email :</strong>
-                    <a href="mailto:wrteam.priyansh@gmail.com ">wrteam.priyansh@gmail.com</a> <br />
+                    <a href="mailto:wrteam.aayush@gmail.com ">wrteam.aayush@gmail.com</a> <br />
 
                     <br />
                     <p>
-                        Thank you for purchasing <strong>e-School</strong> - Follow this documentation to setup admin
-                        panel and mobile application. <br />
-                        Thank you so much!
+                        Thank you for purchasing <strong>e-School</strong>.
+                        We appreciate your support. In this documentation, you will find instructions on how to set up
+                        the admin panel and mobile applications for e-School.
+                        If you have any questions, feel free to reach out. Thank you for choosing e-School!
                     </p>
                     <br />
                 </div>
@@ -601,10 +602,11 @@
 
                 <br />
                 <div class="sec-content">
-                    <h4>Its our pleasure to serve our service and support. please contact our support team.</h4>
+                    <h4>Its our pleasure to serve and support our customers. Please contact our support team if you
+                        encounter any issues or have any questions related to e-School.</h4>
                     <br>
-                    <h4>Head of Customer Support : Priyansh Parmar <a href="https://join.skype.com/invite/E228Z6F4s3gB"
-                            target="_blank" style="color:#3c55d1">Skype Name : Priyansh Parmar</a></h4>
+                    <h4>Customer Support Head for e-School : <a href="https://join.skype.com/invite/vdrcOZy99P4x"
+                            target="_blank" style="color:#3c55d1">Aayush Thacker</a></h4>
                     <br>
                     <h4>To help our customers, we constantly be in touch with every customer if they need any assistance
                         regarding our product.
@@ -642,6 +644,17 @@
                             Default password of teacher is teacher's date of birth i.e. ddmmyyyy. <br>
                             <span style="font-size: 1.5rem;"> Note :- teacher's credentails will be sent to their
                                 respective email.</span>
+                        </h4><br>
+                    </div>
+                    <br><br>
+                    <h3>2. Why is the application calendar not showing any events ?</h3><br>
+                    <div style="padding-left: 18px;">
+                        <h4>
+                            All the calendars in the application will show months in the current session year which can
+                            be set from admin panel System Settings -> General Settings -> Session Year. If the current
+                            date is not in the session year, the calendars will only show the current month with today
+                            highlited and not any events. To fix the issue you can choose the correct session year or
+                            create one from admin panel Session Year screen.<br>
                         </h4><br>
                     </div>
                 </div>
@@ -684,7 +697,6 @@
 
                 <br />
                 <div class="sec-content">
-                    <h4>Contact Us</h4>
                     <h4>WRTeam has creative and dedicated group of developers who are mastered in Apps Developments and
                         Web Application Development with a niche in delivering quality solutions to customers across the
                         globe.
@@ -694,7 +706,7 @@
                     <h4>Visit Us : <a href="https://wrteam.in/" target="_blank">https://wrteam.in</a>
                         <br>
                     </h4>
-                    <h4>Mail Us : support@wrteam.in</h4>
+                    <h4>Mail Us : <a href="mailto:support@wrteam.in" target="_blank">support@wrteam.in</a></h4>
                     <br>
                     <h4>Thank you very much.</h4>
 
