Added: YouTube videos for features

--- a/index.html
+++ b/index.html
@@ -672,13 +672,12 @@
                     <span class="icon fa fa-at"></span>
                     <h2>Academics</h2>
                 </div>
-
+                <br />
                 <div class="sec-content">
-                    <br />
                     <div class="container-iframe">
-                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/3k_qZ0EwheY"
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/xvgLHLHp54w"
                             frameborder="0" allowfullscreen>Your
-                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=3k_qZ0EwheY">Click
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=xvgLHLHp54w">Click
                                 Here To
                                 View The Video on YouTube</a></iframe>
                     </div>
@@ -771,6 +770,14 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/tkEckJue_dw"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=tkEckJue_dw">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div>
+                    <br>
                     <h3>Student Admission</h3>
                     <p>
                         The Student Admission section in the e-School web panel allows administrators to add new
@@ -841,6 +848,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/CwTldqBQW9M"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=CwTldqBQW9M">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div>
+
+                    <br>
                     <p>
                         The Teachers screen in the e-School web panel allows administrators to manage teachers within
                         the school. From this screen, administrators can create new teachers by filling in details such
@@ -888,6 +904,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/4j94z_N2C_E"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=4j94z_N2C_E">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div>
+
+                    <br>
                     <h3>Create Timetable</h3>
                     <p>
                         The admin can create the timetable for each class section from Monday to Sunday. They need to
@@ -920,6 +945,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/nkp2hTLUF4E"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=nkp2hTLUF4E">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
+                    <br>
                     <p>
                         The admin can manage holidays from this section. To create a holiday, the admin needs to choose
                         a date, title, and an optional description. This allows the admin to schedule and organize
@@ -947,6 +981,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/fLhpseE32xY"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=fLhpseE32xY">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
+
                     <p>
                         The admin can create sliders from this screen, allowing them to showcase images on the
                         application's home screen. These sliders serve as visual highlights and can be used to display
@@ -979,6 +1022,14 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/38RUcrpt6u4"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=38RUcrpt6u4">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
                     <p>
                         Announcements can be managed from this screen by both teachers and admins. It allows for
                         effective communication and dissemination of important information within the school community.
@@ -1022,6 +1073,14 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/4UhdTIAUG7Y"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=4UhdTIAUG7Y">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
                     <h3>Add Attendance (Teacher Panel Login)</h3>
 
                     <p>Class teachers can take attendance for students in a class, either for today or for a specific
@@ -1034,6 +1093,15 @@
                         holiday types, as well as by date. Additionally, a download feature is available to export the
                         attendance data.</p>
                     <br>
+
+                    <h3>Add Bulk Data (Teacher Panel Login)<div class="new-button">NEW</div>
+                    </h3>
+
+                    <p>Teachers can easily manage class attendance by utilizing the Bulk Data Entry feature. They can
+                        select the desired class and date range, generating a dummy data file containing pre-filled
+                        student details. In this file, teachers need only input '1' (for present) or '0' (for absent) in
+                        the 'type' column for each student on each date. Afterward, they can effortlessly upload the
+                        file using the form below and submit it to efficiently record attendance in bulk.</p>
 
                     <br>
                     <h3>eSchool & eSchool Teacher application</h3>
@@ -1049,6 +1117,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/4V0GDA_O6wg"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=4V0GDA_O6wg">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
+
                     <h3>Create Lesson (Teacher Panel Login)</h3>
                     <p>Teachers can effectively manage lessons for students in a specific class section and subject.
                         When creating a lesson, teachers will see their class sections and subjects available for
@@ -1078,6 +1155,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/1RGEpoNgJu0"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=1RGEpoNgJu0">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
+
                     <h3>Create Assignment (Teacher Panel Login)</h3>
                     <p>Teachers can create assignments for their class sections on a particular subject. When creating
                         an assignment, teachers must provide a name and submission date for the assignment.</p>
@@ -1110,6 +1196,15 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/ibL_B5drcCI"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=ibL_B5drcCI">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
+
                     <h3>Create Exam</h3>
                     <p>
                         Exams can be managed by the admin from this screen. They can create exams by providing an exam
@@ -1187,6 +1282,14 @@
 
                 <br />
                 <div class="sec-content">
+                    <div class="container-iframe">
+                        <iframe class="responsive-iframe" src="https://www.youtube.com/embed/w7RAV3Al_Bc"
+                            frameborder="0" allowfullscreen>Your
+                            browser doesn't support iframes. <a href="https://www.youtube.com/watch?v=w7RAV3Al_Bc">Click
+                                Here To
+                                View The Video on YouTube</a></iframe>
+                    </div><br>
+
                     <h3>Fees Configuration</h3>
                     <p>To utilize the fees feature with online payment, administrators must complete this form by
                         providing their payment gateway details such as Razorpay or Stripe. Additionally, they need to
