Added: 2_0_2 update features

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                                 <li><a href='#feature-assignments'>Assignments</a></li>
                                 <li><a href='#feature-online-and-offline-exams'>Online and Offline Exams</a></li>
                                 <li><a href='#feature-fees-payment'>Fees Payment</a></li>
+                                <li><a href='#feature-custom-notification'>Custom Notifications</a></li>
                             </ul>
                         </li>
 
@@ -886,6 +887,15 @@
                         required format using the "Download Dummy File" button. This functionality streamlines the
                         process of importing student data into the e-School system.
                     </p>
+                    <br>
+                    <h3>Student Dynamic Admission Form Fields<div class="new-button">NEW</div>
+                    </h3>
+                    <p>
+                        The Student Dynamic Admission Form Field is a feature that simplifies student enrollment. School
+                        administrators can add their own form fields in admission forms with various types like
+                        textboxes, radio buttons, checkboxes, textareas, and file uploaders to suit the specific needs
+                        of the schools, and making the admission process efficient and adaptable to changing needs.
+                    </p>
                 </div>
             </section>
             <section class="section css-structure" id="feature-teachers">
@@ -1405,7 +1415,34 @@
                     <br />
                 </div>
             </section>
+            <section class="section css-structure" id="feature-custom-notification">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Custom Notifications</h2>
+                </div>
 
+                <br />
+                <div class="sec-content">
+
+                    <h3>1) Admin Panel</h3>
+                    <img src="images/admin/21.png" alt="e-School">
+                    <br>
+                    <br>
+                    <h3>2) Student App</h3>
+                    <img src="images/app/notificationlist.png" alt="e-School" style="text-align: center;">
+
+                    <br>
+                    <br>
+
+                    <h3>Custom Notifications<div class="new-button">NEW</div>
+                    </h3>
+                    <p>Custom notifications in eSchool allow users to create and send personalized messages for all
+                        users, specific user, students, parents, and teachers which will shown on notification section
+                        in applications. These notifications can be created only by admin to specific events, such as
+                        important announcements, upcoming school activities, academic updates, and more. With the
+                        flexibility to choose recipients, message title, message content.</p>
+                </div>
+            </section>
 
 
             <!--Support-->
@@ -1493,7 +1530,8 @@
                         It's our pleasure to serve top-notch service to you.
                         Please give us your honest feedback that will help us to make a more strong and reliable product
                         by click here <a href="https://codecanyon.net/downloads" style="color:#3c55d1"
-                            target="_blank">Rate Us</a>.
+                            target="_blank">Rate
+                            Us</a>.
                         Thank you very much.
                     </h4>
 
