Added: Chat Module details

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                                 <li><a href='#changeFont'>Change Font</a></li>
                                 <li><a href='#changeLanguage'>Change Language</a></li>
                                 <li><a href='#changeItemAnimations'>Change Item Animations</a></li>
+                                <li><a href='#chatMessageConstraints'>Chat Message Constraints</a></li>
                                 <li><a href='#generateReleaseVersion'>Generate Release Version</a></li>
                             </ul>
                         </li>
@@ -86,6 +87,7 @@
                                 <li><a href='#feature-online-and-offline-exams'>Online and Offline Exams</a></li>
                                 <li><a href='#feature-fees-payment'>Fees Payment</a></li>
                                 <li><a href='#feature-custom-notification'>Custom Notifications</a></li>
+                                <li><a href='#feature-chat'>Chat</a></li>
                             </ul>
                         </li>
 
@@ -106,7 +108,7 @@
                 </nav>
             </div>
 
-            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2023</div>
+            <div class="copyright">Copyright &copy; <a href="mailto:support@wrteam.in">WRTeam</a> 2024</div>
         </aside>
 
         <div id="content-section">
@@ -637,6 +639,32 @@
                 </div>
             </section>
 
+            <section class="section css-structure" id="chatMessageConstraints">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Chat Message Constraints</h2>
+                </div>
+                <br>
+                <div class="sec-content">
+                    <h4>Within our messaging system, specific technical constraints are in place for effective
+                        functionality. When composing a regular text message, users are limited to a maximum of 500
+                        characters. For file and image attachments, the system allows for a total of 30 files to be sent
+                        simultaneously, with an individual file size limit of 10 MB.
+                        <br><br>
+                        It's crucial to note that attempts to upload a file exceeding the 10 MB threshold will be
+                        unsuccessful, in adherence to these constraints. Modification of these parameters can be
+                        executed through the lib/utils/constants.dart file.
+                        <br><br>
+                        However, it's essential to acknowledge the backend's overarching limitations. The backend
+                        enforces a maximum cap of 50 files per message and restricts individual file sizes to a maximum
+                        of 2 GB. Consequently, any adjustments made within the app must align with these backend
+                        constraints for seamless operation.
+                    </h4>
+                    <br><br>
+                    <img src="images/app/chatMessageConstraints.png" alt="e-School" />
+                    <br><br>
+                </div>
+            </section>
 
 
             <section class="section css-structure" id="generateReleaseVersion">
@@ -1441,6 +1469,40 @@
                         in applications. These notifications can be created only by admin to specific events, such as
                         important announcements, upcoming school activities, academic updates, and more. With the
                         flexibility to choose recipients, message title, message content.</p>
+                </div>
+            </section>
+
+            <section class="section css-structure" id="feature-chat">
+                <div class="sec-title">
+                    <span class="icon fa fa-at"></span>
+                    <h2>Chat<div class="new-button" style="background-color: #fff;color: #2b70fa; font-size: 16;">NEW
+                        </div>
+                    </h2>
+
+                </div>
+
+                <br />
+                <div class="sec-content">
+                    <p>The Chat feature in our eSchool project enables students to communicate with their class
+                        teachers, while parents can chat with any of their children's teachers. Teachers can easily
+                        engage with parents and students associated with their classes. The feature includes real-time
+                        messaging using notifications, and supports text, images, and file sharing.
+                        It ensures a seamless and organized communication experience for all users.</p>
+
+                    <table style="align-items: center;margin: 0 auto;"">
+                        <tr>
+                            <td><img src=" images/app/chatting_1.jpg" alt="e-School"
+                        style="text-align: center; max-height: 800px;">
+                        </td>
+                        <td>
+                            <div style="width: 10px;"></div>
+                        </td>
+                        <td><img src="images/app/chatting_2.jpg" alt="e-School"
+                                style="text-align: center; max-height: 800px;">
+                        </td>
+                        </tr>
+                    </table>
+
                 </div>
             </section>
 
