Added: Purchase code validator step in admin panel setup

--- a/index.html
+++ b/index.html
@@ -194,17 +194,31 @@
 
                     <br><br>
 
-                    <h3 class="content-title">4. Database Configuration Screen</h3>
+                    <h3 class="content-title">4. Purchase Code Validation</h3>
+                    <h3>Here you'll have to insert the purchase code obtained from CodeCanyon to authenticate your
+                        purchase and
+                        authorize your server to access the services.</h3>
+
+                    <h3>To find your Purchase code you can visit this link: <a
+                            href="https://help.market.envato.com/hc/en-us/articles/202822600-Where-Is-My-Purchase-Code-"
+                            target=" _blank">Where
+                            is My Purchase code?</a></h3>
+
+                    <img src="images/admin/24.png" alt="e-School">
+
+                    <br><br>
+
+                    <h3 class="content-title">5. Database Configuration Screen</h3>
                     <img src="images/admin/4.png" alt="e-School">
 
                     <br><br>
 
-                    <h3 class="content-title">5. Database Connection Status</h3>
+                    <h3 class="content-title">6. Database Connection Status</h3>
                     <img src="images/admin/5.png" alt="e-School">
 
                     <br><br>
 
-                    <h3 class="content-title">6. Final installation Screen</h3>
+                    <h3 class="content-title">7. Final installation Screen</h3>
                     <h3>If everything is configured successfully then your Admin panel has been installed
                         successfully.You can login as Super Admin using the credentials provided here.</h3>
                     <img src="images/admin/6.png" alt="e-School">
@@ -289,15 +303,15 @@
                         Setup flutter in your system
                     </h3>
                     <ol>
-                        Visit flutter official website : <a
-                            href="https://docs.flutter.dev/get-started/install">https://docs.flutter.dev/get-started/install</a>
+                        Visit flutter official website : <a href="https://docs.flutter.dev/get-started/install"
+                            target="_blank">https://docs.flutter.dev/get-started/install</a>
 
                         for full install guide.
                         <br>
                         <br>
                         If you prefer video tutorials, we recommend this playlist for the full installation process <br>
-                        <a
-                            href="https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm">https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm</a>
+                        <a href="https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm"
+                            target="_blank">https://www.youtube.com/playlist?list=PLSzsOkUDsvdtl3Pw48-R8lcK2oYkk40cm</a>
                     </ol>
                     <br />
                 </div>
